[package]
name = "rustzcash-lib"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bellman = "0.2.0"
blake2b_simd = "0.5"
blake2s_simd = "0.5"
ff = "0.5.0"
libc = "0.2"
pairing = "0.15.0"
lazy_static = "1"
byteorder = "1"
rand_core = "0.5.1"
zcash_primitives = "0.1.0"
zcash_proofs = "0.1.0"